Se crea solicitud propuesta inicial
