# models/solicitud_request.model.go
@@ -1,0 +1,8 @@
+package models
+
+// SolicitudRequest DTO para recibir la solicitud
+type SolicitudRequest struct {
+	TerceroId       int         `json:"TerceroId"`
+	TipoSolicitudId interface{} `json:"TipoSolicitudId,omitempty"`
+	SabaticoId      interface{} `json:"SabaticoId,omitempty"`
+}
